uoproxy (0.4.1) unstable; urgency=low

  * fix auto-closing gumps in multi client mode

 --

uoproxy (0.4) unstable; urgency=low

  * added SOCKS4 proxy support
  * no character list on attach
  * fixed crash when output buffer is full
  * walk: take position from walk_cancel packet
  * walk: resync if walk packets are out of sync
  * walk: don't clear queue when client disconnects
  * walk: accept out-of-sync "cancel" packets
  * attach: ignore undefined bytes in username/password
  * packets: support packet 0xf0 (ProtocolExtension)
  * support client 6.0.14.2
  * fake Razor handshake
  * support encrypted clients
  * fix phantom items in open containers after attaching
  * port to mingw32 (Windows)

 -- Max Kellermann <max@duempel.org>  Sat, 01 Sep 2012 09:59:39 +0200

uoproxy (0.3) unstable; urgency=low

  * support binding on an IP address
  * fix typo in log message
  * support the "Gump Packed" packet (0xdd)
  * return PA_DROP instead of PA_DELETED after attach
  * don't re-query the login server for attaching secondary client
  * allow short version string
  * remember mobile flags
  * added option "light"

 -- Max Kellermann <max@duempel.org>  Mon, 01 Mar 2010 22:44:33 +0100

uoproxy (0.2) unstable; urgency=low

  * fixed struct uo_packet_create_character
  * show which packet caused connection abort
  * only disconnect the faulty client on protocol error
  * send cached client version during reconnect; this fixed game login on
    servers supporting client version 6
  * use libevent
  * write buffering, enable TCP_NODELAY
  * forward client version packets only if they were requested by the server
  * support client 6.0.1.7
  * auto-reconnect after invalid packet from server
  * log invalid packets
  * do asynchronous writes
  * new command "%verbose" modifies the log level
  * hide internal IP address in antispy mode

 -- Max Kellermann <max@duempel.org>  Tue, 25 Dec 2007 12:40:32 +0100

uoproxy (0.1.3) unstable; urgency=low
