@@ -1,6 +1,7 @@
 uoproxy (0.4.1) unstable; urgency=low
 
   * fix auto-closing gumps in multi client mode
+  * fix walk display on secondary client (workaround for v7 client bug)
 
  --
 
